--- a/skins/PenginUI/resource/webkit.css
+++ b/skins/PenginUI/resource/webkit.css
@@ -67,9 +67,16 @@
 	width: 23px;
 	background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAJCAYAAAD6reaeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAENJREFUeNpiSE6I+w8EDMiYycfXnyElMf4/AxJgAhHoEkwwBrIEE7I2mASK4JbNGxnmzF/IyIQuANeOLAAG2NwJEGAAuVg0Qtlxn1kAAAAASUVORK5CYII=);
 }
+
+/*
+  Template: PenginUI - Stand 22.10.2020
+  Website: www.gameindustry.eu
+*/
+
+/* Global und Startseite */
 a:link { color:#bac0c6 !important; }
 a:visited { color:#bac0c6 !important; }
-a:hover {	color:wheat !important; }
+a:hover { color:wheat !important; }
 a:active { color: grey !important; text-decoration: underline !important; }
 div.gutter_header, a.gutter_giftcard.gutter_item, div.fullscreen-bg, a.promo_link, div.page_background_holder, div.home_page_takeover_link, a.home_page_takeover_sizer.app_impression_tracked { display: none; }
 div.home_page_gutter { top:90px !important; }
@@ -90,20 +97,11 @@ div.bb_h1, div.bb_h2, div.bb_h3, div.bb_h4 { color:#acb2b8 !important; }
 span.updated_app_date, span.rateUpCount, a.bb_link { color:#ebebeb !important; }
 div.app_tag, div.hover_details_block_full.ellipsis { color:#ebebeb !important; background: #161a1f !important; }
 
+/* Navi */
 .navigation_bar { background-image: none !important; background-color: rgb(53, 62, 71) !important;}
 a.selected.featured, .navigation_bar > a.selected, .navigation_bar > a:hover { background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%); border-radius: 4px; }
 
-div.partnersaledisplay_SaleOuterContainer_150kd.undefined { margin-top:100px !important; }
-.best_button_container > a { background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%); color: white !important; }
-div#sale_root.react_landing_background, div.partnersaledisplay_SaleBackground_2N8Se.SaleBackground, div.partnersaledisplay_SaleBackground_2N8Se.undefined, body.sale_page_background, body.v6.sale_page_background.sale_page_n_section.responsive_page, body.v6, body.v6.responsive_page, body.v6.sale_page_background.sale_page_n_section { background:none !important; background-image:none !important; background-color:#161a1f !important; }
-div.best_title, div.best_title_sub, div.partnereventshared_SaleSectionHeader_2WMiQ { color:#bac0c6 !important; }
-img.saleEventBannerStyle.saleEventBannerBig { display: none; }
-div#home_takeunder_ctn.home_ctn, div.home_page_content_takeunder { display: none; }
-div.home_page_content.deep_dive_block { display: none !important; }
-div.react_landing_background {background-image: none !important; background-color:transparent !important; }
-
-div#news div.newshr, div.newsPostBlock.eurogamer, div.newsPostBlock.rps, div.newsPostBlock.pcgamer, div.newsPostBlock.kotaku { display: none !important; }
-
+/* Startseite */
 div.home_area_spotlight, div.spotlight_weeklong_ctn, #store_nav_area .store_nav_bg, .home_page_body_ctn.has_takeover #store_nav_area .store_nav_bg, .dailydeal_countdown { background:none; background-image:none !important; background-color:#353e47 !important; }
 .searchbox { background:none; background-image:none !important; background-color:#95979a !important; }
 .store_header_btn_gray, a#wishlist_link.store_header_btn_content { background-image:none !important; background-color:#161a1f !important; }
@@ -111,7 +109,6 @@ div.home_area_spotlight, div.spotlight_weeklong_ctn, #store_nav_area .store_nav_
 a.tab_item.app_impression_tracked { height:auto !important;}
 .store_capsule, .contenthub_specials_ctn { background:none !important; }
 a.contenthub_page_takeover_sizer { display:none !important; }
-
 .store_main_capsule, .store_main_capsule, .carousel_container.spotlight .carousel_items > * .store_capsule.daily_deal, .game_hover_box, .tab_item.focus, div#tab_preview_container { background:none; background-image:none !important; background-color:#353e47 !important; }
 a.tab_item.ds_flagged.ds_owned.app_impression_tracked.focus::after, div.tab_preview.focus, .carousel_container.spotlight .carousel_items > * .store_capsule { background:none; background-image:none !important; background-color:#353e47 !important; }
 div.updated_app_announcement_headline a, div.updated_app_name, div.updated_app_announcement_text, div.tab_item_name, .tab_item.focus .tab_item_name, .tab_item.focus .discount_block .discount_final_price, div#tab_preview_container h2 { color:#acb2b8 !important; }
@@ -124,6 +121,7 @@ body.v6 .store_nav .popup_block_new .popup_body, body.v6 #footer_nav .popup_bloc
 .store_nav .popup_menu .popup_menu_item, .creator .responsive_page_template_content .popup_menu .popup_menu_item, .curator .responsive_page_template_content .popup_menu .popup_menu_item, .footer_content .popup_menu .popup_menu_item, .search_area .popup_body .match, .search_area .popup_body .match .match_name, body.v6 .store_nav .popup_block_new .popup_body, body.v6 #footer_nav .popup_block_new .popup_body a { color: white !important;}
 .store_nav .tab:hover > span, .store_nav.tab:hover, .store_nav .tab.focus > span, .store_nav .tab.focus { background: #373e47 !important; color: white !important; }
 
+/* Ausgeblendetes Zeug */
 div.game_area_description.game_area_description img { display: none !important; }
 a.btnv6_blue_hoverfade.btn_medium.right, div.queue_controls_description, div.btn_next_in_queue.btn_next_in_queue_trigger { display: none !important; }
 div#recommended_block.block { display: none !important; }
@@ -137,7 +135,9 @@ div.recommended_by_steam_labs_ctn.home_ctn.ir_ctn { display: none !important; }
 div.home_ctn.community_recommendations_by_steam_labs_ctn { display: none !important; }
 div.discovery_queue_ctn.home_ctn { display: none !important; }
 div.home_index_banner.home_page_content { display: none !important; }
+div#news div.newshr, div.newsPostBlock.eurogamer, div.newsPostBlock.rps, div.newsPostBlock.pcgamer, div.newsPostBlock.kotaku { display: none !important; }
 
+/* Produktseiten */
 div.referring_curator_ctn, div.store_capsule_frame.curator_spotlight.no_bg, div.steam_curators_block.block.responsive_apppage_reviewblock, div.steam_curators_ctn.home_ctn { display: none !important; }
 div.top_new_releases.home_ctn, div.top_new_releases_background, div.top_new_releases.home_ctn.below_tabs { display: none !important; }
 div.broadcast_embeddable_bordered_container_3zXpF, div#home_broadcast_scroll_target, div.home_ctn.live_streams_ctn.no_paging { display: none !important; }
@@ -153,11 +153,11 @@ div.early_access_header .devnotes .morebutton, div.early_access_header .heading 
 div.labs_label { display: none !important; }
 div.labs_new, div.search_labs_banner, h2.pageheader.full, div#page_section_container { display: none !important; }
 p.reason.info:before { display: none !important; }
-
 div.recommendation_highlight.recommendation_title_offset, div.friend_reviews { display:none !important; }
 div.reviews_info_ctn, div.review_ctn { border:none; }
 div#specials_container, div.contenthub_specials_ctn, div.contenthub_spotlight_container, div.contenthub_dailydeal_container, div.rightcol.cart_rightcol { display:none !important; }
 
+/* Profilanpassungen */
 div.profile_page.has_profile_background, body.profile_page, div.profile_page {background-color: black !important;}
 div.profile_content, div.profile_content.has_profile_background  {margin-top:0px; background-color: rgba(0,0,0,0.70) !important; background-image:none; }
 div.no_header.profile_page {background-image:none;}
@@ -193,6 +193,7 @@ a.screenshot_showcase_smallscreenshot.screenshot_count { border: 1px solid #4a54
 .newmodal_header { border-left:1px solid #bac0c6; border-right:1px solid #bac0c6; border-top: 1px solid #bac0c6; }
 .newmodal_content { border-left:1px solid #bac0c6; border-right:1px solid #bac0c6; border-bottom: 1px solid #bac0c6; }
 
+/* Buttonhorror >.< */
 a#VoteUpBtn.btnv6_blue_hoverfade.btn_medium.ico_hover, a#VoteDownBtn.btnv6_blue_hoverfade.btn_medium.ico_hover, div#VoteUpDownBtnCtn.controlblock.review_create_vote_controls { background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important;	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; }
 a.btnv6_lightblue_blue.btnv6_border_2px.btn_medium { background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important;	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; }
 .btn_green_steamui.btn_medium { background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%); }
@@ -206,6 +207,7 @@ a.btnv6_lightblue_blue.btnv6_border_2px.btn_medium { background: -webkit-linear-
 a.btnv6_white_transparent.btn_small_thin.follow_button, a.btnv6_white_transparent.btn_small_tall.btn_uppercase, a.btnv6_white_transparent.btn_small.btn_uppercase, a.btn_darkblue_white_innerfade.btn_medium, a.big_button, a.big_button:hover, .btn_profile_action, a.btn_profile_action.btn_medium { background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%); }
 .btnv6_white_transparent:not(.btn_disabled):not(:disabled):not(.btn_active):not(.active):hover, .btn_darkblue_white_innerfade:not(.btn_disabled):not(:disabled):not(.btn_active):not(.active):hover { background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%); }
 
+/* Diskussionsbereiche und Warnmeldungen */
 .commentthread_comment.hidden_post { display: none !important; }
 .commentthread_comment.responsive_body_text.commentthread_deleted_comment { display: none !important; }
 div.forum_topic_tooltip { border: 1px solid #4a545e !important; background: #161a1f !important; }
@@ -224,10 +226,13 @@ div.topic_cannotreply_reason.forum_newtopic_box { background-color: rgba( 192, 4
 .forumtopic_answer .answer_quote, blockquote.bb_blockquote.with_author  { border-width: 1px solid; border-color: rgb(74, 84, 94) !important; background: rgb(22, 26, 31) !important; opacity: 0.7; color: #acb2b8; }
 div#bannedNotification.bannedNotification, div#incompatibleNotification.incompatibleNotification, div#visibilityNotificationPrivate.visibilityNotification, div#visibilityNotificationFriendsOnly.visibilityNotification, div#visibilityNotificationUnlisted.visibilityNotification { background-color: rgba( 192, 45, 46) !important; color: white !important; }
 
+/* Zeug ohne Kategorie */
 div.market_header, div.page_container.page_container_market { background:none; background-image:none !important; background-color:#161a1f !important; }
 div.partnersaledisplay_SaleOverlayCtn_3GTIc.SaleOverlayCtn { display: none !important; }
 .reward_bg_1, .reward_bg_2, .reward_bg_3, .reward_bg_4, .reward_bg_5, div#faq.rewards_faq_ctn, div.rewards_badge_levelup_ctn.reward_bg_3, div.rewards_profile_tier.reward_bg_4 , div.partnersaledisplay_SaleSection_1cOoC.eventbbcodeparser_SaleSectionCtn_39HWX, div.reward_items_ctn { background: transparent !important; background-color:transparent !important; }
+div.responsive_page_content, body.v6.labs, .trending_reviews_controls_ctn { background:none !important; background-image:none !important; background-color:#161a1f !important; }
 
+/* Marktanpassungen, Inventar etc */
 .market_headertip { border:1px solid #cc0000; background-color:#161a1f; }
 div.market_header_bg, div#BG_top, div.market_header_logo {background-image: none !important; background-color:transparent !important;}
 .forumtopic_answer.answer_ctn, .post_searchresult_simplereply, div#BG_top > .user_info { border-width: 1px solid; border-color: rgb(74, 84, 94) !important; background: rgb(22, 26, 31) !important; }
@@ -242,4 +247,17 @@ div.itemHolder.disabled { border: 1px solid #4a545e; width:96px !important; heig
 #tabcontent_pendinggifts.no_pending_gifts, .view_inventory_page, div#tabcontent_inventory, .filter_tag_options, .trade_item_box { background-color: #353e47 !important; border: none !important; }
 .view_inventory_page .item.activeInfo, .view_inventory_page .item:hover { filter:drop-shadow(8px 8px 10px gray); background-image: none); background-repeat: no-repeat; border: 1px solid #4a545e; }
 
-div.responsive_page_content, body.v6.labs, .trending_reviews_controls_ctn { background:none !important; background-image:none !important; background-color:#161a1f !important; }
+/* Events und Sonderaktionen */
+div.partnersaledisplay_SaleSection_1cOoC.partnersaledisplay_SaleSectionTabs_1FPIV.SaleSectionTabs, .SaleBackground .SaleSectionTabs .SaleTab, .SaleBackground .SaleSectionTabs .Selected, .partnersaledisplay_TabButtonsCtn_21-6t .partnersaledisplay_TabButton_1Gz4s { background: transparent !important; box-shadow:none !important; border:none !important; }
+div.partnersaledisplay_SaleSectionTabContainer_1Svj0 { overflow-x: hidden !important; }
+div.partnersaledisplay_SaleTab_gc-rq.partnersaledisplay_SaleSectionTabsTab_3BgHm.SaleTab.Selected, div.partnersaledisplay_SaleSectionTabContainer_1Svj0, .partnersaledisplay_TabButtonsCtn_21-6t .partnersaledisplay_TabButton_1Gz4s { background: transparent !important; }
+div.SaleSchedDetailCtn { background-color: transparent !important; }
+div.partnersaledisplay_SaleSection_1cOoC.salesectioneventschedule_SaleSchedCtn_2g7il.SaleSchedCtn { background-image:none !important; background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important;	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; }
+div.partnersaledisplay_SaleOuterContainer_150kd.undefined { margin-top:100px !important; }
+.best_button_container > a { background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%); color: white !important; }
+div#sale_root.react_landing_background, div.partnersaledisplay_SaleBackground_2N8Se.SaleBackground, div.partnersaledisplay_SaleBackground_2N8Se.undefined, body.sale_page_background, body.v6.sale_page_background.sale_page_n_section.responsive_page, body.v6, body.v6.responsive_page, body.v6.sale_page_background.sale_page_n_section { background:none !important; background-image:none !important; background-color:#161a1f !important; }
+div.best_title, div.best_title_sub, div.partnereventshared_SaleSectionHeader_2WMiQ { color:#bac0c6 !important; }
+img.saleEventBannerStyle.saleEventBannerBig { display: none; }
+div#home_takeunder_ctn.home_ctn, div.home_page_content_takeunder { display: none; }
+div.home_page_content.deep_dive_block { display: none !important; }
+div.react_landing_background {background-image: none !important; background-color:transparent !important; }
