--- a/skins/PenginUI/resource/webkit.css
+++ b/skins/PenginUI/resource/webkit.css
@@ -69,8 +69,9 @@
 }
 
 /*
-  Template: PenginUI - Stand 22.10.2020
+  Template: PenginUI - v0.99.6 - Stand 23.10.2020
   Website: www.gameindustry.eu
+  Steam: steamcommunity.com/id/pen-chan/
 */
 
 /* Global und Startseite */
@@ -144,9 +145,6 @@ div.broadcast_embeddable_bordered_container_3zXpF, div#home_broadcast_scroll_tar
 .blotter_comment_thread .commentthread_header, .blotter_comment_thread .commentthread_footer, .apphub_HomeHeaderContent .apphub_AppIcon { display: unset !important; }
 div.apphub_AppName { margin:-35px 0px 0px 40px !important; }
 div#content_out.page_content_ctn.dark { display: none !important; }
-div.DRM_notice, .ack_message_header, .support_message_header { background: none; background-color: rgba(192,45,46) !important; color: white !important; }
-div.DRM_notice a:hover { color:white; }
-div.ack_message, div.support_message { border:3px solid #cc0000; }
 div.early_access_banner { display: none !important; }
 div.early_access_header { border: 1px solid #4a545e !important; }
 div.early_access_header .devnotes .morebutton, div.early_access_header .heading { background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%); }
@@ -157,7 +155,7 @@ div.recommendation_highlight.recommendation_title_offset, div.friend_reviews { d
 div.reviews_info_ctn, div.review_ctn { border:none; }
 div#specials_container, div.contenthub_specials_ctn, div.contenthub_spotlight_container, div.contenthub_dailydeal_container, div.rightcol.cart_rightcol { display:none !important; }
 
-/* Profilanpassungen */
+/* Profilanpassungen und Popups */
 div.profile_page.has_profile_background, body.profile_page, div.profile_page {background-color: black !important;}
 div.profile_content, div.profile_content.has_profile_background  {margin-top:0px; background-color: rgba(0,0,0,0.70) !important; background-image:none; }
 div.no_header.profile_page {background-image:none;}
@@ -214,8 +212,6 @@ div.forum_topic_tooltip { border: 1px solid #4a545e !important; background: #161
 .forum_paging_pagelink.active, .forum_paging_controls .commentthread_pagelink.active {color:wheat !important; }
 .forum_topic, .rightbox { background-color: rgba( 55, 65, 71) !important; }
 .forum_topic_locked_notice, .forum_topic.locked { background-image: none !important; background-color: rgba(34, 38,43, 0.7) !important; color: white !important; }
-div.topic_cannotreply_reason.forum_newtopic_box { background-color: rgba( 192, 45, 46) !important; color: white !important; }
-.forum_comment_author_banned { padding: 3px; border-radius: 2px; background-color: rgba( 192, 45, 46) !important; color: white !important; }
 .forumtopic_comments .commentthread_comment { background-color: rgba( 57, 65, 71) !important; }
 .forum_op { background-image:none !important; background-color: rgba( 55, 65, 71, 0.7) !important; }
 .forumtopic_comments .commentthread_comment .commentthread_comment_author { opacity: 1.0 !important; }
@@ -224,8 +220,15 @@ div.topic_cannotreply_reason.forum_newtopic_box { background-color: rgba( 192, 4
 .forumtopic_comments .commentthread_answer_bar, .forumtopic_answer { background: rgba( 89, 94, 100, 1.0) !important; color: #ffffff; }
 .forumtopic_comments .commentthread_comment.commentthread_answer_comment { border: 1px solid #595e64 !important; }
 .forumtopic_answer .answer_quote, blockquote.bb_blockquote.with_author  { border-width: 1px solid; border-color: rgb(74, 84, 94) !important; background: rgb(22, 26, 31) !important; opacity: 0.7; color: #acb2b8; }
-div.incompatibleNotification, div.forum_topic_needs_content_check_notice.forum_newtopic_box, div#bannedNotification.bannedNotification, div#incompatibleNotification.incompatibleNotification, div#visibilityNotificationPrivate.visibilityNotification, div#visibilityNotificationFriendsOnly.visibilityNotification, div#visibilityNotificationUnlisted.visibilityNotification { background-color: rgba( 192, 45, 46) !important; color: white !important; }
 div.forum_topic_needs_content_check_notice.forum_newtopic_box img {display: none !important; }
+
+/* Warnmeldungen */
+div.DRM_notice, .ack_message_header, .support_message_header { background: none; background-color: rgba(192,45,46) !important; color: white !important; }
+div.DRM_notice a:hover { color:white; }
+div.ack_message, div.support_message { border:3px solid #cc0000; }
+div#error_display.workshop_paymentinfo_validation_error, div.incompatibleNotification, div.forum_topic_needs_content_check_notice.forum_newtopic_box, div#bannedNotification.bannedNotification, div#incompatibleNotification.incompatibleNotification, div#visibilityNotificationPrivate.visibilityNotification, div#visibilityNotificationFriendsOnly.visibilityNotification, div#visibilityNotificationUnlisted.visibilityNotification { background-color: rgba( 192, 45, 46) !important; color: white !important; }
+div.topic_cannotreply_reason.forum_newtopic_box { background-color: rgba( 192, 45, 46) !important; color: white !important; }
+.forum_comment_author_banned { padding: 3px; border-radius: 2px; background-color: rgba( 192, 45, 46) !important; color: white !important; }
 
 /* Zeug ohne Kategorie */
 div.market_header, div.page_container.page_container_market { background:none; background-image:none !important; background-color:#161a1f !important; }
@@ -248,7 +251,7 @@ div.itemHolder.disabled { border: 1px solid #4a545e; width:96px !important; heig
 #tabcontent_pendinggifts.no_pending_gifts, .view_inventory_page, div#tabcontent_inventory, .filter_tag_options, .trade_item_box { background-color: #353e47 !important; border: none !important; }
 .view_inventory_page .item.activeInfo, .view_inventory_page .item:hover { filter:drop-shadow(8px 8px 10px gray); background-image: none); background-repeat: no-repeat; border: 1px solid #4a545e; }
 
-/* Events und Sonderaktionen */
+/* Events, Sonderaktionen und sonstige Desaster */
 div.partnersaledisplay_SaleSection_1cOoC.partnersaledisplay_SaleSectionTabs_1FPIV.SaleSectionTabs, .SaleBackground .SaleSectionTabs .SaleTab, .SaleBackground .SaleSectionTabs .Selected, .partnersaledisplay_TabButtonsCtn_21-6t .partnersaledisplay_TabButton_1Gz4s { background: transparent !important; box-shadow:none !important; border:none !important; }
 div.partnersaledisplay_SaleSectionTabContainer_1Svj0 { overflow-x: hidden !important; }
 div.partnersaledisplay_SaleTab_gc-rq.partnersaledisplay_SaleSectionTabsTab_3BgHm.SaleTab.Selected, div.partnersaledisplay_SaleSectionTabContainer_1Svj0, .partnersaledisplay_TabButtonsCtn_21-6t .partnersaledisplay_TabButton_1Gz4s { background: transparent !important; }
