--- a/skins/PenginUI/resource/webkit.css
+++ b/skins/PenginUI/resource/webkit.css
@@ -269,3 +269,4 @@ img.saleEventBannerStyle.saleEventBannerBig { display: none; }
 div#home_takeunder_ctn.home_ctn, div.home_page_content_takeunder { display: none; }
 div.home_page_content.deep_dive_block { display: none !important; }
 div.react_landing_background {background-image: none !important; background-color:transparent !important; }
+div#SaleSection_10548 { display: none; }
