--- a/skins/PenginUI/resource/webkit.css
+++ b/skins/PenginUI/resource/webkit.css
@@ -69,7 +69,7 @@
 }
 
 /*
-  Template: PenginUI - v0.99.6 - Stand 10.11.2020
+  Template: PenginUI - v0.99.7 - Stand 25.11.2020
   Website: www.gameindustry.eu
 */
 
@@ -136,7 +136,7 @@ a.franchise_notice { display: none !important; }
 div#game_area_reviews.game_area_description { display: none !important; }
 div.recommended_by_steam_labs_ctn.home_ctn.ir_ctn { display: none !important; }
 div.home_ctn.community_recommendations_by_steam_labs_ctn { display: none !important; }
-div.discovery_queue_ctn.home_ctn { display: none !important; }
+a.btn_next_in_queue.btn_next_in_queue_trigger, div.discovery_queue_ctn.home_ctn { display: none !important; }
 div.home_index_banner.home_page_content { display: none !important; }
 div#news div.newshr, div.newsPostBlock.eurogamer, div.newsPostBlock.rps, div.newsPostBlock.pcgamer, div.newsPostBlock.kotaku { display: none !important; }
 
@@ -276,3 +276,5 @@ div#home_takeunder_ctn.home_ctn, div.home_page_content_takeunder { display: none
 div.home_page_content.deep_dive_block { display: none !important; }
 div.react_landing_background {background-image: none !important; background-color:transparent !important; }
 div#SaleSection_10548 { display: none; }
+body.v6.sale_autumn2020 { background: none !important; }
+body.v6.sale_autumn2020 .home_page_takeover_sizer, body.v6.sale_autumn2020 .page_background_holder { display: none !important; }
