--- a/skins/PenginUI/resource/webkit.css
+++ b/skins/PenginUI/resource/webkit.css
@@ -36,7 +36,7 @@
 }
 
 /*
-  Template: PenginUI - v0.99.6 - Stand 23.10.2020
+  Template: PenginUI - v0.99.8 - Stand 07.01.2021
   Website: www.gameindustry.eu
 */
 
@@ -134,7 +134,7 @@ div.profile_animated_background, div.profile_animated_background > video { posit
 div.profile_background_image_content.in_client { background-image: none !important; }
 div.profile_background_holder_content { background-color: transparent !important; }
 div.profile_background_overlay_content { background-color: rgba(0,0,0,0.70) !important; margin-top:13px; }
-div.profile_header_bg { background-color: rgba(0,0,0,0.70) !important; background-image:none; border-bottom-right-radius: 5px !important; border-bottom-left-radius: 5px !important; }
+div.profile_header_bg { width:976px !important; background-color: rgba(0,0,0,0.70) !important; background-image:none; }
 div.profile_header_bg_texture { background: none; background-image: none !important; }
 div.profile_summary_footer { text-align:center; }
 div.profile_customization_header { color:#FFF !important; font-weight:normal; font-size:14px; text-transform: uppercase; }
@@ -151,10 +151,12 @@ a.screenshot_showcase_smallscreenshot.screenshot_count { border: 1px solid #4a54
 .playerAvatar.online img, .friend_status_online .friend_block_avatar img, .appHubIconHolder.online img, .avatar_block_status_online img { border: none; background: none !important; }
 .playerAvatar.offline img, .friend_status_offline .friend_block_avatar img, .appHubIconHolder.offline img, .avatar_block_status_offline img { border: none; background: none !important; }
 .playerAvatar.offline, .friend_block_holder.friend_status_offline .friend_block_avatar, .friend_activity.friend_status_offline .friend_block_avatar, .appHubIconHolder.offline, .avatar_block_status_offline, .appHubIconHolder.ignored { border: 1px solid #4a545e; background: none !important; }
+.playerAvatar.offline, .friend_block_holder.friend_status_offline .friend_block_avatar, .friend_activity.friend_status_offline .friend_block_avatar, .appHubIconHolder.offline, .avatar_block_status_offline, .appHubIconHolder.ignored img { filter: contrast(100%) grayscale(1) !important; }
 .miniprofile_top { border: 1px solid #4a545e !important; background: #353e47 !important; }
 .miniprofile_favorite_badge, .profile_header_badge { border: 1px solid #4a545e !important; background: #161a1f !important; }
 .profile_comment_area .commentthread_textarea { background-color:transparent !important;}
 .profile_comment_area .commentthread_entry_quotebox { min-height:50px; max-height:100px; border:1px solid #000 !important; background-color:#2f3841 !important; }
+div.newmodal { max-width: 600px !important;} 
 .newmodal_background { background: #161a1f !important; }
 .modal_top_bar { background: none !important; }
 .newmodal_content_border { padding:0px !important; }
@@ -238,3 +240,7 @@ div#home_takeunder_ctn.home_ctn, div.home_page_content_takeunder { display: none
 div.home_page_content.deep_dive_block { display: none !important; }
 div.react_landing_background {background-image: none !important; background-color:transparent !important; }
 div#SaleSection_10548 { display: none; }
+
+/* Kuration */
+.lists_more_container .item .overlay { background: transparent !important; }
+.lists_more_container .item .bg { filter: contrast(100%) grayscale(0.7); }
