--- a/skins/PenginUI/resource/webkit.css
+++ b/skins/PenginUI/resource/webkit.css
@@ -156,6 +156,15 @@ a.screenshot_showcase_smallscreenshot.screenshot_count { border: 1px solid #4a54
 .miniprofile_favorite_badge, .profile_header_badge { border: 1px solid #4a545e !important; background: #161a1f !important; }
 .profile_comment_area .commentthread_textarea { background-color:transparent !important;}
 .profile_comment_area .commentthread_entry_quotebox { min-height:50px; max-height:100px; border:1px solid #000 !important; background-color:#2f3841 !important; }
+
+/* Profil: Awards */
+div.profile_count_link_preview_ctn { visibility:hidden !important; }
+div.profile_awards { display:none !important;}
+div.profile_badges_badge { visibility:visible !important; margin-top:-40px !important; }
+div.profile_group_links.profile_count_link_preview_ctn.responsive_groupfriends_element { visibility:visible !important; }
+div.profile_friend_links.profile_count_link_preview_ctn.responsive_groupfriends_element { visibility:visible !important; }
+
+/* Profil: PopUp Fenster */
 div.newmodal { max-width: 600px !important;} 
 .newmodal_background { background: #161a1f !important; }
 .modal_top_bar { background: none !important; }
@@ -163,7 +172,7 @@ div.newmodal { max-width: 600px !important;}
 .newmodal_header { border-left:1px solid #bac0c6; border-right:1px solid #bac0c6; border-top: 1px solid #bac0c6; }
 .newmodal_content { border-left:1px solid #bac0c6; border-right:1px solid #bac0c6; border-bottom: 1px solid #bac0c6; }
 
-/* Buttonhorror >.< */
+/* Global: Buttonhorror >.< */
 a#VoteUpBtn.btnv6_blue_hoverfade.btn_medium.ico_hover, a#VoteDownBtn.btnv6_blue_hoverfade.btn_medium.ico_hover, div#VoteUpDownBtnCtn.controlblock.review_create_vote_controls { background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important;	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; }
 a.btnv6_lightblue_blue.btnv6_border_2px.btn_medium { background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important;	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; }
 .btn_green_steamui.btn_medium { background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%); }
@@ -192,7 +201,6 @@ div.forum_topic_tooltip { border: 1px solid #4a545e !important; background: #161
 .forumtopic_comments .commentthread_answer_bar, .forumtopic_answer { background: rgba( 89, 94, 100, 1.0) !important; color: #ffffff; }
 .forumtopic_comments .commentthread_comment.commentthread_answer_comment { border: 1px solid #595e64 !important; }
 div.bb_code, blockquote.bb_blockquote, .forumtopic_answer .answer_quote, blockquote.bb_blockquote.with_author { border-width: 1px solid; border-color: rgb(74, 84, 94) !important; background: rgb(22, 26, 31) !important; opacity: 0.7; color: #acb2b8; }
-
 div.forum_topic_needs_content_check_notice.forum_newtopic_box img {display: none !important; }
 
 /* Warnmeldungen */
