--- a/steamui/css/library.css
+++ b/steamui/css/library.css
@@ -1,6 +1,6 @@
 /*
-  Template: PenginUI - v0.99.8 - Stand 10.01.2021
-  Website: www.gameindustry.eu
+  Template: PenginUI - v0.99.8 - Stand 12.01.2021
+  © Copyright - www.gameindustry.eu
   Library Anpassungen: Januar 2021
 */
 /* Menüs & Hintergründe */
